tests/baselines/reference/assignmentCompatWithCallSignatures2.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(31,1): error TS2322: Type '() => 数字' is not assignable to type 'T'.
  Property 'f' is missing in type '() => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(32,1): error TS2322: Type '(x: 数字) => 文字' is not assignable to type 'T'.
  Property 'f' is missing in type '(x: 数字) => 文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(33,1): error TS2322: Type '() => 数字' is not assignable to type '{ f(x: 数字): 无值; }'.
  Property 'f' is missing in type '() => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(34,1): error TS2322: Type '(x: 数字) => 文字' is not assignable to type '{ f(x: 数字): 无值; }'.
  Property 'f' is missing in type '(x: 数字) => 文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(42,1): error TS2322: Type 'S2' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(43,1): error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type 'T'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(44,1): error TS2322: Type '(x: 文字) => 数字' is not assignable to type 'T'.
  Property 'f' is missing in type '(x: 文字) => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(45,1): error TS2322: Type '(x: 文字) => 文字' is not assignable to type 'T'.
  Property 'f' is missing in type '(x: 文字) => 文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(46,1): error TS2322: Type 'S2' is not assignable to type '{ f(x: 数字): 无值; }'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(47,1): error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type '{ f(x: 数字): 无值; }'.
  Types of property 'f' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(48,1): error TS2322: Type '(x: 文字) => 数字' is not assignable to type '{ f(x: 数字): 无值; }'.
  Property 'f' is missing in type '(x: 文字) => 数字'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts(49,1): error TS2322: Type '(x: 文字) => 文字' is not assignable to type '{ f(x: 数字): 无值; }'.
  Property 'f' is missing in type '(x: 文字) => 文字'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithCallSignatures2.ts (12 errors) ====
    // void returning call signatures can be assigned a non-void returning call signature that otherwise matches
    
    interface T {
        f(x: number): void;
    }
    var t: T;
    var a: { f(x: number): void };
    
    t = a;
    a = t;
    
    interface S {
        f(x: number): string;
    }
    var s: S;
    var a2: { f(x: number): string };
    t = s;
    t = a2;
    a = s;
    a = a2;
    
    t = { f: () => 1 };
    t = { f: <T>(x:T) => 1 };
    t = { f: function f() { return 1 } };
    t = { f(x: number) { return ''; } }
    a = { f: () => 1 }
    a = { f: <T>(x: T) => 1 };
    a = { f: function (x: number) { return ''; } }
    
    // errors
    t = () => 1;
    ~
!!! error TS2322: Type '() => 数字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '() => 数字'.
    t = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: 数字) => 文字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '(x: 数字) => 文字'.
    a = () => 1;
    ~
!!! error TS2322: Type '() => 数字' is not assignable to type '{ f(x: 数字): 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '() => 数字'.
    a = function (x: number) { return ''; }
    ~
!!! error TS2322: Type '(x: 数字) => 文字' is not assignable to type '{ f(x: 数字): 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '(x: 数字) => 文字'.
    
    interface S2 {
        f(x: string): void;
    }
    var s2: S2;
    var a3: { f(x: string): void };
    // these are errors
    t = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    t = a3;
    ~
!!! error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type 'T'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    t = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: 文字) => 数字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 数字'.
    t = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type 'T'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 文字'.
    a = s2;
    ~
!!! error TS2322: Type 'S2' is not assignable to type '{ f(x: 数字): 无值; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    a = a3;
    ~
!!! error TS2322: Type '{ f(x: 文字): 无值; }' is not assignable to type '{ f(x: 数字): 无值; }'.
!!! error TS2322:   Types of property 'f' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    a = (x: string) => 1;
    ~
!!! error TS2322: Type '(x: 文字) => 数字' is not assignable to type '{ f(x: 数字): 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 数字'.
    a = function (x: string) { return ''; }
    ~
!!! error TS2322: Type '(x: 文字) => 文字' is not assignable to type '{ f(x: 数字): 无值; }'.
!!! error TS2322:   Property 'f' is missing in type '(x: 文字) => 文字'.
    